syntax = "proto3";

option java_multiple_files = true;
option java_package = "anbrain.qa.rococo.grpc";
option java_outer_classname = "ArtistProto";

package rococo;

service ArtistService {
  // Получить художника по ID
  rpc GetArtist(ArtistRequest) returns (ArtistResponse);

  // Получить всех художников с пагинацией
  rpc GetAllArtists(AllArtistsRequest) returns (AllArtistsResponse);

  // Поиск художников по имени
  rpc SearchArtistsByName(SearchArtistsRequest) returns (AllArtistsResponse);

  // Создать нового художника
  rpc CreateArtist(CreateArtistRequest) returns (ArtistResponse);

  // Обновить данные художника
  rpc UpdateArtist(UpdateArtistRequest) returns (ArtistResponse);
}

// Запрос художника по ID
message ArtistRequest {
  string id = 1;
}

// Запрос всех художников с пагинацией
message AllArtistsRequest {
  int32 page = 1;
  int32 size = 2;
}

// Запрос поиска художников по имени
message SearchArtistsRequest {
  string name = 1;
  int32 page = 2;
  int32 size = 3;
}

// Запрос создания художника
message CreateArtistRequest {
  string name = 1;
  string biography = 2;
  string photo = 3;
}

// Запрос обновления художника
message UpdateArtistRequest {
  string id = 1;
  string name = 2;
  string biography = 3;
  string photo = 4;
}

// Ответ с данными художника
message ArtistResponse {
  string id = 1;
  string name = 2;
  string biography = 3;
  string photo = 4;
}

// Ответ со списком художников
message AllArtistsResponse {
  repeated ArtistResponse artists = 1;
  int32 total_count = 2;
}